--- a/style.css
+++ b/style.css
@@ -21,7 +21,20 @@ body {
   padding: 0;
 }
 
-#map {
-  pointer-events: none;
+.presentation-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .8);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
+#presentation {
+  height: 80%;
+  margin: 5% 20%;
+}
